# bookshelf-i11-integration

./: Dockerfile  README.md  catalog-info.yaml  daqmessenger.py  notebook.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: containers.yml
